Creando todo el mayor menor

--- a/sala-de-juegos/src/app/pages/home/home.component.html
+++ b/sala-de-juegos/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
             <div class="juego-card">
                 <h3>Mayor o Menor</h3>
                 <p>¿Cuál número sigue? Adiviná si es mayor o menor.</p>
-                <button class="jugar-button " (click)="jugar('mayor-menor')">Jugar</button>
+                <button class="jugar-button " (click)="jugar('mayor-o-menor')">Jugar</button>
             </div>
 
             <div class="juego-card">
