--- a/sala-de-juegos/src/app/pages/juegos/mayor-o-menor/mayor-o-menor.component.html
+++ b/sala-de-juegos/src/app/pages/juegos/mayor-o-menor/mayor-o-menor.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="carta">
-            <img src="assets/cartas/back.png" alt="Carta oculta" />
+            <img src="assets/cartas/back-card.png" alt="Carta oculta" />
             <p>¿Mayor o Menor?</p>
         </div>
     </div>
