--- a/sala-de-juegos/src/app/pages/juegos/mayor-o-menor/mayor-o-menor.component.html
+++ b/sala-de-juegos/src/app/pages/juegos/mayor-o-menor/mayor-o-menor.component.html
@@ -24,5 +24,5 @@
         <p *ngIf="mensaje">{{ mensaje }}</p>
     </div>
 
-    <button (click)="reiniciar()" *ngIf="juegoTerminado">Reiniciar</button>
+    <button class="reiniciar-btn" (click)="reiniciar()" *ngIf="juegoTerminado">Reiniciar</button>
 </div>
